--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:16-alpine
 COPY package*.json ./
-RUN npm install ./
+COPY . .
+RUN npm install 
 EXPOSE 5000
-CMD [ "node", "server.js" ]
+CMD [ "node", "index.js" ]
