--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -6,3 +6,9 @@ services:
     restart : always
     ports:
     - 5000:5000
+  prometheus:
+    image: promcustom
+    build: ./prometheus_custom
+    container_name: prom
+    ports:
+      - 9090:9090
