--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,6 @@
     "@opentelemetry/instrumentation-express": "^0.28.0",
     "@opentelemetry/instrumentation-http": "^0.27.0",
     "@opentelemetry/sdk-metrics-base": "^0.27.0",
-    "@opentelemetry/sdk-node": "^0.27.0",
+    "@opentelemetry/sdk-node": "^0.27.0"
   }
 }
