--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -5,3 +5,8 @@ services:
     restart : always
     ports:
     - 5000:5000
+  prometheus:
+    image: devtool09/promcustom
+    container_name: prom
+    ports:
+      - 9090:9090
